--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -34,13 +34,17 @@ jobs:
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Europe/Rome
-          plugin_habits: yes
-          plugin_habits_charts_type: classic
-          plugin_habits_days: 14
-          plugin_habits_facts: yes
-          plugin_habits_from: 200
-          plugin_habits_languages_limit: 8
-          plugin_habits_languages_threshold: 0%
+
+          # Waiting for this PR:
+          # https://github.com/lowlighter/metrics/pull/1769
+          # plugin_habits: yes
+          # plugin_habits_charts_type: classic
+          # plugin_habits_days: 14
+          # plugin_habits_facts: yes
+          # plugin_habits_from: 200
+          # plugin_habits_languages_limit: 8
+          # plugin_habits_languages_threshold: 0%
+
           plugin_introduction: yes
           plugin_introduction_title: yes
           plugin_isocalendar: yes
